Generic db support (DBCompatibility / stateless MD loaders)